Updated training materials based on feedback from new intern. Replaced video with multiple readable resources about DataONE and EML.

--- a/training/01_introduction.Rmd
+++ b/training/01_introduction.Rmd
@@ -19,9 +19,9 @@ Read Matt Jones et al.'s paper on [effective data management](data/simple-guidel
 
 ## Using DataONE
 
-**Data Observation Network for Earth** (DataONE) is a community driven project providing access to data across multiple member repositories, supporting enhanced search and discovery of Earth and environmental data.
+**Data Observation Network for Earth** (DataONE) is a community driven initiative that provides access to data across multiple member repositories, supporting enhanced search and discovery of Earth and environmental data.
 
-Watch the first 38 minutes of [this video](https://drive.google.com/drive/u/0/folders/0BxXanx5RKvlgSV9CYTRlTHJ4VzQ) explaining how DataONE works. This video is pretty technical, and you may not understand it all at first. Please feel free to ask Dom, Jeanette, or Jesse questions.
+Read more about what DataONE is [here](https://www.dataone.org/what-dataone) and about DataONE member node (MN) guidelines [here](https://www.dataone.org/sites/all/documents/DataONE_MN_Partner_Guidelines_20170501.pdf). Please feel free to ask Dom or Jesse any questions you have about DataONE.
 
 ## Working on a remote server
 
@@ -41,8 +41,9 @@ When you write scripts, try to avoid writing relative paths (which rely on what 
 ## Exercise 1 {.exercise}
 
 * Download the [csv](data/Loranty_2016_Environ._Res._Lett._11_095008.csv) of Table 1 from [this paper.](http://iopscience.iop.org/article/10.1088/1748-9326/11/9/095008/meta)
-* Reformat the table using R under the guidelines in the journal article on effective data management.
-    + If you need an R refresher, take as much time as you need to go over the [data carpentry guide.](http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html).
+* Reformat the table to meet the guidelines outlined in the journal article on effective data management.
+    + While we prefer you use R (a scripted environment) to perform these tasks in your job, for the purposes of this training feel free to do it however you can if you are not confident data wrangling in R.
+    + If you need an R refresher, go over the [data carpentry guide.](http://www.datacarpentry.org/R-ecology-lesson/01-intro-to-r.html).
     + You may also find the data carpentry [lesson on `dplyr`](http://www.datacarpentry.org/R-ecology-lesson/03-dplyr.html) and OHI's [data wrangling chapters](http://ohi-science.org/data-science-training/dplyr.html) helpful.
 * Go to [test.arcticdata.io](https://test.arcticdata.io/#data) and submit your reformatted file with appropriate metadata that you derive from the text of the paper:
     + list yourself as the first 'Creator' so your test submission can easily be found,
