--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "NCEAS Data Team Training"
-author: "Jeanette Clark, Jesse Goldstein, Dominic Mullen, Bryce Mecum, Matt Jones, Peter Slaughter, Irene Steves, Mitchell Maier, Emily O'Dean"
+author: "Jesse Goldstein, Dominic Mullen, Jeanette Clark, Irene Steves, Mitchell Maier, Bryce Mecum, Peter Slaughter, Emily O'Dean"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: 
@@ -17,7 +17,7 @@ favicon: "favicon.ico"
 
 ## First day to-dos {-}
 
-* Get a tour of the office from Ginger, Dom, Jeanette, or Jesse
+* Get a tour of the office from Ginger, Jesse, or Dom
 * Fill out required paperwork from Ana (room 309)
 * Have Gabriella take your picture (room 309)
 * Set up the remainder of your accounts
@@ -25,14 +25,14 @@ favicon: "favicon.ico"
 
 ## Account information {-}
 
-* [LDAP - NCEAS](https://identity.nceas.ucsb.edu/identity/cgi-bin/ldapweb.cgi?cfg=account) - Jeanette or Jesse should have set this up prior to your start date to help get other accounts set up by the first day. This account and password control your access to:
+* [LDAP - NCEAS](https://identity.nceas.ucsb.edu/identity/cgi-bin/ldapweb.cgi?cfg=account) - this should be set up prior to your start date in order to help get other accounts set. This account and password control your access to:
     + arcticdata [RT queue](https://support.nceas.ucsb.edu/rt/)
     + GitHub Enterprise - [arctic-data](https://github.nceas.ucsb.edu/KNB/arctic-data/) and [sasap-data](https://github.nceas.ucsb.edu/NCEAS/sasap-data/)
 * Datateam server - follow instructions in email from Nick at NCEAS to reset your datateam password in the terminal
 * [ORCiD](https://orcid.org/register) - create an account
 * [NCEAS Slack](http://nceas.slack.com) - get an invite from [slack.nceas.ucsb.edu](http://slack.nceas.ucsb.edu)
     + Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam, #sasap, #social
-* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Dom, Jeanette, or Jesse in Slack
+* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Dom or Jesse in Slack
 * GitHub - if you do not have a public GitHub account already, please register for one [here](https://github.com/join?source=header-home)
 * [Schedule](https://docs.google.com/spreadsheets/d/1Jf7IkSf8Vqu51xv1DDaTNCrTAZd0RMNH9ExZw0eyH4I/edit#gid=948090118) - fill out anticipated quarterly schedule. Note there are separate tabs for each week AND a general schedule tab for the quarter.
 * [Electronic Timekeeping](https://timekeeping.ucsb.edu/) - make sure you can log on to electronic timekeeping 
