--- a/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
+++ b/workflows/pi_correspondence/email_templates/A_initial_email_template.Rmd
@@ -31,7 +31,7 @@ Describes DATA in package (ideally > 100 words)
 
 At least one data file
 
-> We noticed that no data files were submitted. With the exception of sensitive social science data, NSF requires the submission of all data products prior to publication. Do you intend to submit data files?
+> We noticed that no data files were submitted. With the exception of sensitive social science data, we seek to  include all data products prior to publication. Do you intend to submit data files?
 
 Open formats
 
@@ -68,7 +68,7 @@ Submissions should:
 
 > Your methods section appears to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades from now. Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. Please edit the data package to provide a more robust methods section.
 
-> NSF requires that comprehensive methods information be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
+> Comprehensive methods information ought to be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
 
 #### Attributes
 
