--- a/workflows/pi_correspondence/email_templates/B_final_email_templates.Rmd
+++ b/workflows/pi_correspondence/email_templates/B_final_email_templates.Rmd
@@ -32,7 +32,7 @@
  
 > Your abstract appears to be missing some information. We suggest that the abstract be sufficiently descriptive for a general scientific audience. It should provide an overview of the scientific context/ project/ hypotheses, how this data package fits into the larger project, a synopsis of the experimental or sampling design, and a summary of the data contents. If you prefer and it is appropriate, we could add language from the abstract in the NSF Award found here: [INSERT URL]
  
-> Your methods section appears to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades from now. Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. Please edit the data package to provide a more robust methods section. We require that comprehensive methods information be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
+> Your methods section appears to be missing some information. Enough detail should be included so that a reasonable scientist can interpret the study and data for reuse without consulting you nor any other resources. This should hold true today, or even decades from now. Users should be able to understand how the data were collected, how to interpret the values, and potentially how to use the data in the case of specialized files. Please edit the data package to provide a more robust methods section. Comprehensive methods information should be included directly in the metadata record. Pointers or URLs to other sites are unstable and insufficient.
 
 > Your submitted data files are in excel format. Please convert your files to a plain text/csv or another open (non-proprietary) format in order to facilitate an accurate transfer of information to users and to ensure preservation of the data in perpetuity.  We can keep your excel files in the dataset, however we recommend at least one version of each file be stored in an open format.
  
